game-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service-service
spec:
  selector:
    app: game-service
  ports:
  - name: http
    port: 80
    targetPort: 5000
